fix: top banner alignment

--- a/output/style.css
+++ b/output/style.css
@@ -71,10 +71,10 @@ img {
  }
 
 .topic-banner {
-    width: 100%;
+    width: calc(100% + 1rem);
     max-width: none;
     padding: 0;
-    margin: 0 0 1.5rem 0;
+    margin: -1.5em -0.5rem 1.5rem -0.5rem;
 }
 
 blockquote {
